--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,78 @@
+ /* font poppins */
+ @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,600;1,300&family=Poppins:wght@500&display=swap');
+
+
+/* common style   */
+
+body{
+   font-family: 'Poppins', sans-serif;
+   background-color:#F3F1FF;
+}
+main{
+    display: flex;
+    justify-content:center;
+}
+.container{
+    width: 870px;
+    height: 679px;
+    background-color: #FFFFFF;
+    padding: 30px;
+}
+.top-players{
+    margin-bottom:30px;
+    
+}
 
 /* top player style */
+.section-title{
+    color:#562EFF;
+    font-size: 24px;
+    margin-top: 33px;
+
+}
 .players{
     display:grid;
+    /* ..................:1fr 1fr 1fr 1fr */
     grid-template-columns: repeat(3 , 1fr);
+    grid-row-gap: 30px;
+}
+.player{
+display:flex;
+align-items: center;
+}
+.player img{
+    height: 56px;
+    width: 56px;
+}
+.player-name{
+    margin-left: 16px;
+    font-size: 18px;
+}
+hr{
+    border:1px solid #F3F1FF;
+}
+
+
+/* top blog styles */
+.blog{
+    display:flex;
+}
+.blog img{
+width: 224px;
+height: 127px;
+}
+.blog-info{
+    margin-left: 16px;
+}
+.blog-title{
+    font: size 20px;
+}
+.blog-author{
+    font-size: 16px;
+    color: #9F9F9F;
+}
+.blog-author a{
+    text-decoration: none;
+    font-size:16px;
+    color:#562EFF;
 }
